<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <com.nextos.launcher.ui.glass.LiquidGlassView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/bg_glass"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnAddWidget"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/widgets"
                android:textColor="@color/text_on_glass"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btnWallpaper"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wallpaper"
                android:textColor="@color/text_on_glass"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btnDoneEdit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/text_on_glass"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.nextos.launcher.ui.glass.LiquidGlassView>
</FrameLayout>
